--- a/style.css
+++ b/style.css
@@ -19,7 +19,7 @@ body {
 .row {
     width: 100%;
     max-width: 1200px;
-    width: 0 auto;
+    margin: 0 auto;
 }
 
 .container {
@@ -150,7 +150,6 @@ input {
     color: #0a1f44;
     padding-left: 25px;
     font-size: 25px;
-    margin-right: 25px;
 }
 
 ::placeholder {
@@ -167,6 +166,7 @@ input {
     box-shadow: 7px 7px 14px rgba(22, 98, 157, 0.4);
     cursor: pointer;
     transition: all 300ms ease;
+    margin-left: 25px;
 }
 
 .btn__search:hover {
@@ -189,4 +189,117 @@ input {
     left: 50%;
     bottom: 20px;
     transform: translateX(-50%);
+}
+
+/* 
+
+MOVIES
+
+*/
+
+#landing__movies {
+    position: relative;
+    height: 40vh;
+}
+
+.overlay__img {
+    position: absolute;
+    opacity: calc(0.6);
+    width: 100%;
+    top: 0;
+    left: 0;
+    height: 40vh;
+    z-index: -1;
+}
+
+.browse__title {
+    color: white;
+    font-size: 50px;
+    margin-bottom: 30px;
+    text-align: center;
+    font-weight: 500;
+    letter-spacing: .1em;
+    line-height: 1.2;
+}
+
+.input__wrapper--browse {
+    position: relative;
+    display: flex;
+    width: 100%;
+    max-width: 700px;
+}
+
+.input__browse {
+    border-radius: 50px;
+    border: none;
+}
+
+.icon {
+    color:#0097b2
+}
+
+.icon:hover {
+    color: rgb(0, 255, 255);;
+}
+
+.btn__search--browse {
+    display: flex;
+    align-items: center;
+    position: absolute;
+    right: 0px;
+    bottom: 4px;
+    top: 0;
+    cursor: pointer;
+    transition: all 300ms ease;
+    cursor: pointer;
+    margin: 0 20px 0 8px;
+}
+
+.movies {
+    display: flex;
+    flex-wrap: wrap;
+}
+
+.movie {
+    width: 33%;
+    padding: 25px;
+}
+
+.movie__img {
+    height: 240px;
+}
+
+.nav__link--browse {
+    margin: 0 20px;
+    font-size: 18px;
+    font-weight: 700;
+    display: flex;
+    align-items: center;
+    color: white;
+}
+
+.nav__btn--browse {
+    border: 2px solid white;
+    background-color: white;
+    border-radius: 50px;
+    color: #0097b2;
+    padding: 12px 40px;
+    border: none;
+    transition: all 300ms ease;
+    text-transform: uppercase;
+    font-size: 13px;
+    letter-spacing: 1px;
+}
+
+.divider {
+    background-color: #0097b2;
+    height: 4px;
+    width: 100%;
+    position: absolute;
+    left: 0;
+    bottom: 0;
+}
+
+.search__movies {
+    padding-top: 100px;
 }
