--- a/style.css
+++ b/style.css
@@ -12,27 +12,30 @@ html {
 }
 
 body {
-    max-width: 100vw;
-    overflow-x: hidden;
+  max-width: 100vw;
+  overflow-x: hidden;
 }
 
 .row {
-    width: 100%;
-    max-width: 1200px;
-    margin: 0 auto;
+  width: 100%;
+  max-width: 1200px;
+  margin: 0 auto;
 }
 
 .container {
-    width: 100%;
-    padding: 30px 0;
+  width: 100%;
+  padding: 30px 0;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 a {
-    text-decoration: none;
+  text-decoration: none;
 }
 
 .turquoise {
-    color: #0097b2;
+  color: #0097b2;
 }
 
 /*
@@ -42,34 +45,34 @@ LANDING
 */
 
 nav {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    height: 100px;
-    padding: 0 20px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  height: 100px;
+  padding: 0 20px;
 }
 
 .nav__logo {
-    width: 100px;
-    height: 100px;
-    border-radius: 50px;
+  width: 100px;
+  height: 100px;
+  border-radius: 50px;
 }
 
 .nav__links {
-    display: flex;
-    justify-content: space-between;
+  display: flex;
+  justify-content: space-between;
 }
 
 .nav__link {
-    margin: 0 20px;
-    font-size: 18px;
-    font-weight: 700;
-    display: flex;
-    align-items: center;
+  margin-left: 20px;
+  font-size: 18px;
+  font-weight: 700;
+  display: flex;
+  align-items: center;
 }
 
 .link__hover-effect {
-    position: relative;
+  position: relative;
 }
 
 .link__hover-effect:after {
@@ -83,112 +86,116 @@ nav {
 }
 
 .hover__turquoise:after {
-    background-color: #0097b2;
+  background-color: #0097b2;
 }
 
 .hover__black:after {
-    background-color: #243e63;
+  background-color: #243e63;
 }
- 
+
 .link__hover-effect:hover:after {
   left: 0;
   width: 100%;
 }
 
 .nav__btn {
-    border: 2px solid #0097b2;
-    background-color: #0097b2;
-    border-radius: 50px;
-    color: white;
-    padding: 12px 40px;
-    border: none;
-    transition: all 300ms ease;
-    text-transform: uppercase;
-    font-size: 13px;
-    letter-spacing: 1px;
+  border: 2px solid #0097b2;
+  background-color: #0097b2;
+  border-radius: 50px;
+  color: white;
+  padding: 12px 40px;
+  border: none;
+  transition: all 300ms ease;
+  text-transform: uppercase;
+  font-size: 13px;
+  letter-spacing: 1px;
 }
 
 .nav__btn:hover {
-    background-color: #1fb9d4;
+  background-color: #539ba8;
 }
 
 header {
-    padding: 0 20px;
+  padding: 0 20px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 .header__info {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    width: 100%;
-    max-width: 1100px;
-    position: relative;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  width: 100%;
+  max-width: 1200px;
+  position: relative;
 }
 
 .header__description {
-    color: #0097b2;
-    font-size: 50px;
-    margin-bottom: 30px;
-    text-align: center;
+  color: #0097b2;
+  font-size: 50px;
+  margin-bottom: 30px;
+  text-align: center;
 }
 
 .input__title {
-    margin-bottom: 40px;
+  margin-bottom: 40px;
 }
 
 .input__wrapper {
-    display: flex;
-    width: 100%;
-    max-width: 700px;
+  display: flex;
+  width: 100%;
+  max-width: 700px;
 }
 
 input {
-    height: 70px;
-    width: 100%;
-    border-radius: 20px;
-    border: 1px solid #0a1f44;
-    color: #0a1f44;
-    padding-left: 25px;
-    font-size: 25px;
+  height: 70px;
+  width: 100%;
+  border-radius: 20px;
+  border: 1px solid #0a1f44;
+  color: #0a1f44;
+  padding-left: 25px;
+  font-size: 25px;
 }
 
 ::placeholder {
-    font-weight: 100;
-    font-size: 18px;
-    display: flex;
+  font-weight: 100;
+  font-size: 18px;
+  display: flex;
 }
 
 .btn__search {
-    width: 100px;
-    border-radius: 20px;
-    border: none;
-    background-color: #0097b2;
-    box-shadow: 7px 7px 14px rgba(22, 98, 157, 0.4);
-    cursor: pointer;
-    transition: all 300ms ease;
-    margin-left: 25px;
+  width: 100px;
+  border-radius: 20px;
+  border: none;
+  background-color: #0097b2;
+  box-shadow: 7px 7px 14px rgba(22, 98, 157, 0.4);
+  cursor: pointer;
+  transition: all 300ms ease;
+  margin-left: 25px;
 }
 
 .btn__search:hover {
-    background-color: rgb(0, 255, 255);
+  background-color: rgb(0, 255, 255);
 }
 
 .btn__search:active {
-    transform: scale(.8);
+  transform: scale(0.8);
 }
 
 .fa-magnifying-glass {
-    color: white;
-    font-size: 40px;
+  color: white;
+  font-size: 40px;
 }
 
 .header__img {
-    max-width: max-content;
-    height: 45vh;
-    position: absolute;
-    left: 50%;
-    bottom: 20px;
-    transform: translateX(-50%);
+  max-width: max-content;
+  height: 45vh;
+  position: absolute;
+  left: 50%;
+  bottom: 20px;
+  transform: translateX(-50%);
 }
 
 /* 
@@ -198,108 +205,119 @@ MOVIES
 */
 
 #landing__movies {
-    position: relative;
-    height: 40vh;
+  position: relative;
+  height: 40vh;
 }
 
 .overlay__img {
-    position: absolute;
-    opacity: calc(0.6);
-    width: 100%;
-    top: 0;
-    left: 0;
-    height: 40vh;
-    z-index: -1;
+  position: absolute;
+  opacity: calc(0.9);
+  width: 100%;
+  top: 0;
+  left: 0;
+  height: 40vh;
+  z-index: -1;
 }
 
 .browse__title {
-    color: white;
-    font-size: 50px;
-    margin-bottom: 30px;
-    text-align: center;
-    font-weight: 500;
-    letter-spacing: .1em;
-    line-height: 1.2;
+  color: white;
+  font-size: 50px;
+  margin-bottom: 30px;
+  text-align: center;
+  font-weight: 500;
+  letter-spacing: 0.1em;
+  line-height: 1.2;
 }
 
 .input__wrapper--browse {
-    position: relative;
-    display: flex;
-    width: 100%;
-    max-width: 700px;
+  position: relative;
+  display: flex;
+  width: 100%;
+  max-width: 700px;
 }
 
 .input__browse {
-    border-radius: 50px;
-    border: none;
+  border-radius: 50px;
+  border: none;
 }
 
 .icon {
-    color:#0097b2
+  color: #0097b2;
 }
 
 .icon:hover {
-    color: rgb(0, 255, 255);;
+  color: rgb(0, 255, 255);
 }
 
 .btn__search--browse {
-    display: flex;
-    align-items: center;
-    position: absolute;
-    right: 0px;
-    bottom: 4px;
-    top: 0;
-    cursor: pointer;
-    transition: all 300ms ease;
-    cursor: pointer;
-    margin: 0 20px 0 8px;
+  display: flex;
+  align-items: center;
+  position: absolute;
+  right: 0px;
+  bottom: 4px;
+  top: 0;
+  cursor: pointer;
+  transition: all 300ms ease;
+  cursor: pointer;
+  margin: 0 20px 0 8px;
 }
 
 .movies {
-    display: flex;
-    flex-wrap: wrap;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
 }
 
 .movie {
-    width: 33%;
-    padding: 25px;
+  border: 1px solid #ccc;
+  border-radius: 8px;
+  padding: 8px;
+  margin: 0 25px 25px;
+  text-align: center;
+  background-color: #f9f9f9;
 }
 
 .movie__img {
-    height: 240px;
+  width: 100%;
+  height: auto;
+  border-radius: 4px;
+}
+
+.movie__info {
+  margin-top: 8px;
 }
 
 .nav__link--browse {
-    margin: 0 20px;
-    font-size: 18px;
-    font-weight: 700;
-    display: flex;
-    align-items: center;
-    color: white;
+  margin-left: 20px;
+  font-size: 18px;
+  font-weight: 700;
+  display: flex;
+  align-items: center;
+  color: white;
 }
 
 .nav__btn--browse {
-    border: 2px solid white;
-    background-color: white;
-    border-radius: 50px;
-    color: #0097b2;
-    padding: 12px 40px;
-    border: none;
-    transition: all 300ms ease;
-    text-transform: uppercase;
-    font-size: 13px;
-    letter-spacing: 1px;
+  border: 2px solid white;
+  background-color: white;
+  border-radius: 50px;
+  color: #0097b2;
+  padding: 12px 40px;
+  border: none;
+  transition: all 300ms ease;
+  text-transform: uppercase;
+  font-size: 13px;
+  letter-spacing: 1px;
 }
 
 .divider {
-    background-color: #0097b2;
-    height: 4px;
-    width: 100%;
-    position: absolute;
-    left: 0;
-    bottom: 0;
+  background-color: #0097b2;
+  height: 4px;
+  width: 100%;
+  position: absolute;
+  left: 0;
+  bottom: 0;
 }
 
 .search__movies {
-    padding-top: 100px;
+  padding-top: 100px;
 }
