--- a/style.css
+++ b/style.css
@@ -93,6 +93,10 @@ nav {
   background-color: #243e63;
 }
 
+.link__hover-effect--white:after {
+  background-color: white;
+}
+
 .link__hover-effect:hover:after {
   left: 0;
   width: 100%;
@@ -224,7 +228,7 @@ MOVIES
   font-size: 50px;
   margin-bottom: 30px;
   text-align: center;
-  font-weight: 500;
+  font-weight: 100;
   letter-spacing: 0.1em;
   line-height: 1.2;
 }
@@ -260,6 +264,8 @@ MOVIES
   transition: all 300ms ease;
   cursor: pointer;
   margin: 0 20px 0 8px;
+  border: none;
+  background: none;
 }
 
 .movies {
@@ -310,7 +316,7 @@ MOVIES
 }
 
 .divider {
-  background-color: #0097b2;
+  background-color: rgb(0, 255, 255);
   height: 4px;
   width: 100%;
   position: absolute;
